crates/config/tests/snapshots/prefix_block_trailing_space.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-trailing-space

## Input

```mical
section { 
  key value
} 

```

## JSON

```json
{
  "sectionkey": "value"
}
```

vim:ft=markdown
