crates/config/tests/snapshots/prefix_block_values.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-values

## Input

```mical
block {
  str hello world
  num 42
  flag true
  neg -1
  quoted "value"
}
empty {
}
http_ {
  port 80
}

```

## JSON

```json
{
  "blockstr": "hello world",
  "blocknum": 42,
  "blockflag": true,
  "blockneg": -1,
  "blockquoted": "value",
  "http_port": 80
}
```

vim:ft=markdown
