crates/config/tests/snapshots/prefix_block_with_values.snap
---
source: crates/config/tests/snapshots.rs
---
# prefix-block-with-values

## Input

```mical
block {
  str hello world
  num 42
  flag true
  neg -1
  quoted "value"
}

```

## JSON

```json
{
  "blockstr": "hello world",
  "blocknum": 42,
  "blockflag": true,
  "blockneg": -1,
  "blockquoted": "value"
}
```

vim:ft=markdown
