crates/config/tests/snapshots/quoted_key_invalid_escape.snap
---
source: crates/config/tests/snapshots.rs
---
# quoted-key-invalid-escape

## Input

```mical
"bad\z" value

```

## Config Error

```
invalid escape sequence '\z' at 4..6
```

## JSON

```json
{
  "badz": "value"
}
```

vim:ft=markdown
