crates/config/tests/snapshots/quoted_keys.snap
---
source: crates/config/tests/snapshots.rs
---
# quoted-keys

## Input

```mical
"my key" value
'single key' value
"" empty-key-value
"key\"name" value

```

## JSON

```json
{
  "my key": "value",
  "single key": "value",
  "": "empty-key-value",
  "key\"name": "value"
}
```

vim:ft=markdown
