crates/config/tests/snapshots/quoted_string_adjacent_escapes.snap
---
source: crates/config/tests/snapshots.rs
---
# quoted-string-adjacent-escapes

## Input

```mical
a "\\\\"
b "\n\t"
c "\\\""

```

## JSON

```json
{
  "a": "\\\\",
  "b": "\n\t",
  "c": "\\\""
}
```

vim:ft=markdown
