crates/config/tests/snapshots/quoted_string_double_all_escapes.snap
---
source: crates/config/tests/snapshots.rs
---
# quoted-string-double-all-escapes

## Input

```mical
a "\\"
b "\""
c "\'"
d "\n"
e "\r"
f "\t"

```

## JSON

```json
{
  "a": "\\",
  "b": "\"",
  "c": "'",
  "d": "\n",
  "e": "\r",
  "f": "\t"
}
```

vim:ft=markdown
